welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:16: error: type mismatch;
 found   : Int(1)
 required: String
    	setCouleurBrosse(tabColor((j+decalage)%tabColor.length)+1)
                                                                ^